--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
+    "@tanstack/react-query": "^5.14.2",
+    "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.2"
   },
