--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.2"
+    "styled-components": "^6.1.2",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
